[package]
name = "malloc_size_of"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MIT OR Apache-2.0"
publish = false

[lib]
path = "lib.rs"

[features]
servo = [
    "accountable-refcell",
    "content-security-policy",
    "crossbeam-channel",
    "http",
    "indexmap",
    "keyboard-types",
    "serde",
    "serde_bytes",
    "string_cache",
    "url",
    "uuid",
    "webrender_api",
    "xml5ever",
]
gecko = []

[dependencies]
accountable-refcell = { version = "0.2.0", optional = true }
app_units = "0.7"
content-security-policy = { version = "0.4.0", features = ["serde"], optional = true }
crossbeam-channel = { version = "0.4", optional = true }
cssparser = "0.34"
dom = { path = "../../../dom/base/rust" }
euclid = "0.22"
http = { version = "0.2", optional = true }
indexmap = { version = "2.2", optional = true }
keyboard-types = { version = "0.4.3", optional = true }
selectors = { path = "../selectors" }
serde = { version = "1.0.27", optional = true }
serde_bytes = { version = "0.11", optional = true }
servo_arc = { path = "../servo_arc" }
smallbitvec = "2.3.0"
smallvec = "1.0"
string_cache = { version = "0.8", optional = true }
thin-vec = { version = "0.2.1", features = ["gecko-ffi"] }
url = { version = "2.4", optional = true }
uuid = { version = "0.8", features = ["v4"], optional = true }
void = "1.0.2"
webrender_api = { git = "https://github.com/servo/webrender", optional = true }
xml5ever = { version = "0.16", optional = true }
