[package]
name = "malloc_size_of"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/servo/stylo"
publish = false

[lib]
path = "lib.rs"

[features]
gecko = ["thin-vec/gecko-ffi"]
servo = ["string_cache"]

[dependencies]
app_units = "0.7"
cssparser = "0.34"
euclid = "0.22"
selectors = { path = "../selectors" }
servo_arc = { path = "../servo_arc" }
smallbitvec = "2.3.0"
smallvec = "1.0"
string_cache = { version = "0.8", optional = true }
thin-vec = { version = "0.2.1" }
void = "1.0.2"
