[package]
name = "selectors"
version = "0.25.0"
authors = ["The Servo Project Developers"]
documentation = "https://docs.rs/selectors/"
description = "CSS Selectors matching for Rust"
repository = "https://github.com/servo/servo"
readme = "README.md"
keywords = ["css", "selectors"]
license = "MPL-2.0"
build = "build.rs"

[lib]
name = "selectors"
path = "lib.rs"

[features]
bench = []
to_shmem = ["dep:to_shmem", "dep:to_shmem_derive"]

[dependencies]
bitflags = "2"
cssparser = "0.34"
derive_more = { version = "0.99", default-features = false, features = ["add", "add_assign"] }
fxhash = "0.2"
log = "0.4"
phf = "0.11"
precomputed-hash = "0.1"
servo_arc = { version = "0.4", path = "../servo_arc" }
smallvec = "1.0"
to_shmem = { version = "0.1", path = "../to_shmem", features = ["servo_arc"], optional = true }
to_shmem_derive = { version = "0.1", path = "../to_shmem_derive", optional = true }
new_debug_unreachable = "1"

[build-dependencies]
phf_codegen = "0.11"
