[package]
name = "to_shmem"
version = "0.1.0"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
edition = "2021"

[lib]
name = "to_shmem"
path = "lib.rs"

[features]
servo = ["cssparser/serde", "cssparser", "servo_arc", "smallbitvec", "smallvec", "string_cache", "thin-vec"]
gecko = ["thin-vec/gecko-ffi", "cssparser", "servo_arc", "smallbitvec", "smallvec", "thin-vec"]

cssparser = ["dep:cssparser"]
servo_arc = ["dep:servo_arc"]
smallbitvec = ["dep:smallbitvec"]
smallvec = ["dep:smallvec"]
string_cache = ["dep:string_cache"]
thin-vec = ["dep:thin-vec"]

[dependencies]
cssparser = { version = "0.34", optional = true }
servo_arc = { version = "0.4.0", path = "../servo_arc", optional = true }
smallbitvec = { version = "2.3.0", optional = true }
smallvec = { version = "1.13", optional = true }
string_cache = { version = "0.8", optional = true }
thin-vec = { version = "0.2.1", optional = true }
