[package]
name = "to_shmem_derive"
version = "0.0.1"
authors = ["The Servo Project Developers"]
license = "MPL-2.0"
edition = "2021"
publish = false

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
darling = { version = "0.20", default-features = false }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", default-features = false, features = ["derive", "parsing"] }
synstructure = "0.13"
