[package]
name = "kvstore"
version = "0.1.0"
authors = ["Myk Melez <myk@mykzilla.org>", "Lina Butler <lina@yakshaving.ninja>"]
license = "MPL-2.0"
edition = "2021"

[dependencies]
atomic_refcell = "0.1"
crossbeam-utils = "0.8"
cstr = "0.2"
lazy_static = "1"
libc = "0.2"
log = "0.4"
moz_task = { path = "../../../xpcom/rust/moz_task" }
nserror = { path = "../../../xpcom/rust/nserror" }
nsstring = { path = "../../../xpcom/rust/nsstring" }
rkv = { version = "0.19", default-features = false, features=["no-canonicalize-path"] }
storage_variant = { path = "../../../storage/variant" }
xpcom = { path = "../../../xpcom/rust/xpcom" }
tempfile = "3"
thin-vec = { version = "0.2.1", features = ["gecko-ffi"] }
thiserror = "1"
rusqlite = "0.31.0"
hashbrown = "0.13"
futures = "0.3"
serde = "1"
serde_json = { version = "1", features = ["float_roundtrip"] }
