[package]
name = "uniffi-bindgen-gecko-js"
version = "0.1.0"
edition = "2018"
license = "MPL-2.0"

[[bin]]
name = "uniffi-bindgen-gecko-js"
path = "src/main.rs"

[dependencies]
anyhow = "1"
askama = { version = "0.13", default-features = false, features = ["config"] }
clap = { version = "4", default-features = false, features = ["std", "derive", "cargo"] }
cargo_metadata = "0.19"
extend = "1.1"
heck = "0.5"
indexmap = { version = "2.2", features = ["serde"] }
textwrap = { version = "0.16", features = ["smawk"], default-features = false }
uniffi = { workspace = true }
uniffi_bindgen = { workspace = true }
uniffi_pipeline = { workspace = true }
serde = "1"
toml = "0.5"
camino = "1.0.8"
