[package]
name = "uniffi-fixture-external-types"
edition = "2021"
version = "0.21.0"
authors = ["Firefox Sync Team <sync-team@mozilla.com>"]
license = "MPL-2.0"
publish = false

[dependencies]
uniffi-example-geometry = { git = "https://github.com/mozilla/uniffi-rs.git", rev = "846612a1d4fb5d11e246bf0682da4a499409424c" }
uniffi_macros = "0.21"
uniffi = "0.21"
thiserror = "1.0"

[build-dependencies]
uniffi_build = "0.21"
