[package]
name = "crash_helper_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-derive = "0.4"
num-traits = "0.2"
thiserror = "2"

[target."cfg(any(target_os = \"android\", target_os = \"linux\", target_os = \"macos\"))".dependencies]
nix = { version = "0.29", features = ["fs", "poll", "socket", "uio"] }

[target."cfg(any(target_os = \"android\", target_os = \"linux\"))".dependencies]
minidump-writer = "0.10"

[target."cfg(target_os = \"windows\")".dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_IO",
    "Win32_System_Kernel",
    "Win32_System_Pipes",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
] }
