[package]
name = "minidump-analyzer"
description = "Analyzes minidumps on the system where they were created, using local debug information."
version = "0.1.0"
authors = ["Alex Franchuk <alex.franchuk@gmail.com>"]
readme = "README.md"
license = "MPL-2.0"
edition = "2021"

[[bin]]
name = "minidump-analyzer"

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1"
breakpad-symbols = "0.22"
clap = { version = "4", default-features = false, features = ["std", "cargo", "wrap_help", "derive"] }
env_logger = { version = "0.10.0", default-features = false }
futures-executor = { version = "0.3", features = ["thread-pool"] }
futures-util = { version = "0.3", features = ["channel"] }
lazy_static = "1.4.0"
log = "0.4"
minidump = "0.22"
minidump-unwind = { version = "0.22", features = ["debuginfo-unwind"] }
mozilla-central-workspace-hack = { version = "0.1", features = ["minidump-analyzer"], optional = true }
serde_json = "1"

[dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_Security_Cryptography_Catalog",
    "Win32_Security_WinTrust",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
]
