[package]
name = "minidump-analyzer"
description = "Analyzes minidumps on the system where they were created, using local debug information."
version = "0.1.0"
authors = ["Alex Franchuk <alex.franchuk@gmail.com>"]
readme = "README.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1"
breakpad-symbols = "0.22"
futures-executor = { version = "0.3", features = ["thread-pool"] }
futures-util = { version = "0.3", features = ["channel"] }
lazy_static = "1.4.0"
log = "0.4"
minidump = "0.22"
minidump-unwind = { version = "0.22", features = ["debuginfo-unwind"] }
serde_json = "1"

[dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_Security_Cryptography_Catalog",
    "Win32_Security_WinTrust",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
]

[dev-dependencies]
crash-handler = "0.6"
minidumper = "0.8"
json = "0.12.4"
sadness-generator = "0.5.0"
tempfile = "3.3.0"
