[package]
name = "mozannotation_server"
version = "0.1.0"
authors = ["Gabriele Svelto"]
edition = "2018"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mozannotation_client = { path = "../mozannotation_client/" }
process_reader = { path = "../process_reader/" }
thiserror = "2"

[target."cfg(any(target_os = \"linux\", target_os = \"android\"))".dependencies]
memoffset = "0.9"
