[package]
edition = "2015"
name = "jsrust_shared"
version = "0.1.0"
authors = ["The Spidermonkey developers"]
license = "MPL-2.0"

[lib]
crate-type = ["rlib"]
name = "jsrust_shared"
path = "lib.rs"

[dependencies]
encoding_c = "0.9.5"
encoding_c_mem = "0.2.4"
mozglue-static = { path = "../../../../mozglue/static/rust" }
gluesmith = { path = "../../fuzz-tests/gluesmith", optional = true }
icu_capi = { version = "2.0", optional = true, default-features= false, features = ["any_provider", "compiled_data", "segmenter", "calendar"] }
unicode-bidi-ffi = { path = "../../../../intl/bidi/rust/unicode-bidi-ffi" }

[features]
simd-accel = ['encoding_c/simd-accel']
icu4x = ['icu_capi']

# Uncomment this to enable perf support in release mode.
#[profile.release]
#debug = true

[package.metadata.cargo-udeps.ignore]
normal = ["mozilla-central-workspace-hack"]
