[package]
name = "abridged_certs"
version = "0.1.0"
edition = "2021"
authors = ["Dennis Jackson <djackson@mozilla.com>"]
license = "MPL-2.0"

[dependencies]
base64 = "0.21.0"
byteorder = "1.2.7"
cstr = "0.2"
lazy_static = "1.4.0"
nserror = { path = "../../../../xpcom/rust/nserror" }
nsstring = { path = "../../../../xpcom/rust/nsstring" }
thin-vec = { version = "0.2.1", features = ["gecko-ffi"] }
xpcom = { path = "../../../../xpcom/rust/xpcom" }
log = "0.4"
hex = "0.4.3"
