[package]
name = "osclientcerts"
version = "0.1.4"
authors = ["Dana Keeler <dkeeler@mozilla.com>"]
edition = "2018"
description = "Platform-specific support for client authentication certificates in Firefox"
license = "MPL-2.0"

[dependencies]
byteorder = "1.3"
env_logger = {version = "0.10", default-features = false } # disable `regex` to reduce code size
lazy_static = "1"
log = "0.4"

pkcs11-bindings = "0.1"
rsclientcerts = { path = "../rsclientcerts" }
sha2 = "0.10.2"
static_prefs = { path = "../../../../modules/libpref/init/static_prefs"}

[target."cfg(any(target_os = \"macos\", target_os = \"ios\"))".dependencies.core-foundation]
version = "0.9"

[target."cfg(any(target_os = \"macos\", target_os = \"ios\"))".dependencies.libloading]
version = "0.8"

[target."cfg(target_os = \"windows\")".dependencies.winapi]
version = "0.3"
features = ["errhandlingapi", "wincrypt"]
