[package]
name = "rsclientcerts"
version = "0.1.0"
authors = ["Dana Keeler <dkeeler@mozilla.com>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
byteorder = "1.3"
digest = "0.10.2"
gecko-profiler = { path = "../../../../tools/profiler/rust-api" }
pkcs11-bindings = "0.1"
rand = "0.8"
sha2 = "0.10.2"
