# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

[package]
name = "build-image"
version = "0.1.0"
authors = ["Tom Prince <tom.prince@twistedmatrix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version= "0.12.4", features = ["rustls-tls", "blocking"], default-features = false}
zstd = "0.13.1"
url = "2.5.1"
anyhow = "1.0.86"
serde = { version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
envy = "0.4.2"
fs_extra = "1.3"

[workspace]
