[package]
name = "firefox-on-glean"
version = "0.1.0"
authors = ["Glean SDK team <glean-team@mozilla.com>"]
edition = "2018"
publish = false
license = "MPL-2.0"

[dependencies]
bincode = "1.0"
chrono = "0.4.10"
glean = { workspace = true }

inherent = "1.0.0"
log = "0.4"
nsstring = { path = "../../../../xpcom/rust/nsstring", optional = true }
gecko-profiler = { path = "../../../../tools/profiler/rust-api", optional = true }
once_cell = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
xpcom = { path = "../../../../xpcom/rust/xpcom", optional = true }
thin-vec = { version = "0.2.1", features = ["gecko-ffi"] }
mozbuild = "0.1"
serde_json = "1"

# Note, we will want to remove this when Bug 1925313 is fixed
[dependencies.time]
version = "0.1.40"

[dev-dependencies]
tempfile = "3.1.0"

[features]
with_gecko = ["xpcom", "nsstring", "gecko-profiler"]
